# zh_mpcc

./: CMakeLists.txt  README.md  package.xml
config/: mpccfollower.yaml  mpccfollower_unified.yaml
docs/: MPCC_THEORY.md  MPCC_TUNING.md  QUICK_START.md
launch/: local_planner.launch  local_planner_mpcc.launch  local_planner_mpcc_unified.launch  mpccfollower.launch  mpccfollower_unified.launch  test_mpcc_framework.launch
rviz/: local_plan.rviz
scripts/: check_hpipm.sh  install_hpipm.sh  mpcc_pred_visualizer.py  mpcc_test_framework.py
src/: localPlanner.cpp  mpccfollower.cpp  mpccfollower_unified.cpp  pathFollower.cpp
